unpackaged/main/default/objects/Geartest__c/Geartest__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Gearset_Test</label>
</CustomObject>