unpackaged/main/default/objects/Geartest__c/fields/Blue__c.field-meta.xml
<CustomField>
    <fullName>Blue__c</fullName>
    <description>help</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Blue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>