unpackaged/main/default/objects/Geartest__c/fields/Orange__c.field-meta.xml
<CustomField>
    <fullName>Orange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>help</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Orange</label>
    <type>Checkbox</type>
</CustomField>