unpackaged/main/default/objects/Geartest__c/fields/Red__c.field-meta.xml
<CustomField>
    <fullName>Red__c</fullName>
    <label>Red</label>
    <length>100</length>
    <type>Text</type>
</CustomField>